# Django_HW5

./: .travis.yml  README.md  celery_results.sqlite3  celerybeat-schedule.db  index.html  manage.py  pyproject.toml  requirements.txt
Django_HW5/: __init__.py  asgi.py  celery.py  middleware.py  settings.py  urls.py  wsgi.py
home/: __init__.py  admin.py  apps.py  emails.py  forms.py  models.py  signals.py  tasks.py  views.py
home/management/commands/: insert_student.py
home/migrations/: 0001_initial.py  0002_auto_20201207_1236.py  0003_student_social_url.py  0004_auto_20201225_1339.py  0005_student_normalized_surname.py  0006_auto_20210108_0844.py  0007_auto_20210109_0707.py  0008_book_title.py  0009_auto_20210109_1055.py  0010_teacher.py  0011_auto_20210112_0914.py  0012_currency.py  0013_auto_20210126_1236.py  0014_student_picture.py
home/templates/: base.html  index.html  send_email_test.html  sign_in.html  sign_up.html  students.html  students_create.html  students_delete.html  update.html
