[tool.poetry]
name = "django_hw5"
version = "0.1.0"
description = ""
authors = ["Sergiy Naumov <1414sergiy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "3.1.4"

[tool.poetry.dev-dependencies]
flake8 = "3.8.4"
Faker = "5.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
