[tool.poetry]
name = "django_hw5"
version = "0.1.0"
description = ""
authors = ["Sergiy Naumov <1414sergiy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "3.1.4"
celery = "5.0.5"
flake8-isort = "4.0.0"
flake8-print = "4.0.0"
flake8-builtins = "1.5.3"
django-extensions = "^3.1.0"
requests = "^2.25.1"
SQLAlchemy = "^1.3.22"
django-redis = "^4.12.1"
gender-guesser = "^0.4.0"

[tool.poetry.dev-dependencies]
flake8 = "3.8.4"
Faker = "5.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
